--- a/flask-service/template/catalog.info.yaml
+++ b/flask-service/template/catalog.info.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ${{ values.name }}
   description: Cadastro de Empresas Uday
   annotations:
-    github.com/project-slug: westibcar/${{ parameters.repoName }}
+    github.com/project-slug: westibcar/${{ values.name }}
     backstage.io/techdocs-ref: dir:.
 spec:
   type: service
