--- a/flask-service/template.yaml
+++ b/flask-service/template.yaml
@@ -83,7 +83,7 @@ spec:
       action: catalog:register
       input:
         repoContentsUrl: ${{ steps['publish'].output.repoContentsUrl }}
-        catalogInfoPath: ./template/catalog-info.yaml
+        catalogInfoPath: /catalog-info.yaml
 
   # LINKS DE SAÍDA apresentados ao final do processo
   output:
