--- a/flask-service/template.yaml
+++ b/flask-service/template.yaml
@@ -1,85 +1,61 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
-  name: flask-service # Nome único do template
-  title: Template Flask Service  # Título exibido na interface do Backstage
-  description: Template para deploy do app Flask service # Descrição breve do que o template faz
+  name: python-template
+  title: Python flask template
+  description: Provisions a minimalistic flask application
 spec:
-  owner: devops  # Dono deste template no catálogo
-  type: service  # Tipo do template (pode ser 'website', 'service', etc.)
+  owner: development
+  type: service
 
-  # FORMULÁRIO apresentado ao usuário na interface do Backstage
   parameters:
-    - title: Template Flask Service 
+    - title: Fill in some steps
       required:
-        - name
+        - component_id
         - environment
       properties:
-        name:
-          title: Nome do Serviço
+        component_id:
+          title: Component name
           type: string
-          description: Template para deploy do app Flask service
-          ui:autofocus: true
+          description: Provide a component (microservice) name
+          pattern: '^([a-zA-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$'
         environment:
-          title: Ambiente
+          title: Environment
           type: string
-          description: Ambiente onde o serviço será implantado
+          description: The environment where this component will be deployed
           enum:
             - dev
-            - staging
             - prod
-          default: dev
-        owner:
-          title: devops
-          type: string
-          description: devops
-          ui:field: OwnerPicker
-          ui:options:
-            catalogFilter:
-              kind: Group
 
-    - title: Repositório Template Software
-      required:
-        - repoName
-      properties:
-        repoName:
-          title: Localização do Repositório
-          type: string
-          ui:field: RepoUrlPicker
-          ui:options:
-            allowedHosts:
-              - github.com
-
-  # PASSOS de execução do template (executados em série)
   steps:
     - id: fetch-base
-      name: Buscar Template Base
+      name: Fetch Base
       action: fetch:template
       input:
-        url: ./template                        # Caminho local ou repositório remoto com os arquivos-base
+        url: ./template
         values:
-          name: ${{ parameters.name }}
-          environment: ${{ parameters.environment }}
-          owner: ${{ parameters.owner }}
+          app_name: ${{parameters.component_id}}
+          app_env: ${{parameters.environment}}
 
     - id: publish
-      name: Publicar no GitHub
+      name: Publish
       action: publish:github
       input:
-        allowedHosts: ['github.com']
-        description: Este é o serviço ${{ parameters.name }}
-        repoUrl: github.com?owner=westibcar&repo=${{ parameters.repoName }}
-        defaultBranch: main
+        allowedHosts:
+          - github.com
+        description: This is ${{ parameters.component_id }}
+        repoUrl: github.com?owner=westibcar&repo=${{parameters.component_id}}
+        protectDefaultBranch: false
+        repoVisibility: public
 
     - id: register
-      name: Registrar no Catálogo
+      name: Register
       action: catalog:register
       input:
         repoContentsUrl: ${{ steps['publish'].output.repoContentsUrl }}
-        catalogInfoPath: /catalog-info.yaml
+        catalogInfoPath: "/catalog-info.yaml"
 
-  # LINKS DE SAÍDA apresentados ao final do processo
   output:
     links:
-      - title: Repositório
+      - title: Repository
         url: ${{ steps['publish'].output.remoteUrl }}
