--- a/flask-service/template/catalog.info.yaml
+++ b/flask-service/template/catalog.info.yaml
@@ -1,12 +1,12 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${{ values.name }}
-  description: Cadastro de Empresas Uday
+  name: ${{values.app_name}}
+  description: Python app that displays time - named ${{values.app_name}}
   annotations:
-    github.com/project-slug: westibcar/${{ values.name }}
+    github.com/project-slug: westibcar/${{values.app_name}}
     backstage.io/techdocs-ref: dir:.
 spec:
   type: service
-  owner: devops
+  owner: development
   lifecycle: experimental
