--- a/flask-service/template.yaml
+++ b/flask-service/template.yaml
@@ -1,61 +1,88 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
-  name: python-template
-  title: Python flask template
-  description: Provisions a minimalistic flask application
+  name: flask-service # Nome único do template
+  title: Template Flask Service  # Título exibido na interface do Backstage
+  description: Template para deploy do app Flask service # Descrição breve do que o template faz
 spec:
-  owner: development
-  type: service
+  owner: devops  # Dono deste template no catálogo
+  type: service  # Tipo do template (pode ser 'website', 'service', etc.)
 
+  # FORMULÁRIO apresentado ao usuário na interface do Backstage
   parameters:
-    - title: Fill in some steps
+    - title: Template Flask Service 
       required:
-        - component_id
+        - name
         - environment
       properties:
-        component_id:
-          title: Component name
+        name:
+          title: Nome do Serviço
           type: string
-          description: Provide a component (microservice) name
-          pattern: '^([a-zA-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$'
+          description: Template para deploy do app Flask service
+          ui:autofocus: true
         environment:
-          title: Environment
+          title: Ambiente
           type: string
-          description: The environment where this component will be deployed
+          description: Ambiente onde o serviço será implantado
           enum:
             - dev
+            - staging
             - prod
+          default: dev
+        owner:
+          title: devops
+          type: string
+          description: devops
+          ui:field: OwnerPicker
+          ui:options:
+            catalogFilter:
+              kind: Group
 
+    - title: Repositório Template Software
+      required:
+        - repoName
+      properties:
+        repoName:
+          title: Localização do Repositório
+          type: string
+          ui:field: RepoUrlPicker
+          ui:options:
+            allowedHosts:
+              - github.com
+
+  # PASSOS de execução do template (executados em série)
   steps:
     - id: fetch-base
-      name: Fetch Base
+      name: Buscar Template Base
       action: fetch:template
       input:
-        url: ./template
+        url: ./template                        # Caminho local ou repositório remoto com os arquivos-base
         values:
-          app_name: ${{parameters.component_id}}
-          app_env: ${{parameters.environment}}
+          app_name: ${{ parameters.name }}
+          app_env: ${{ parameters.environment }}
+          app_wner: ${{ parameters.owner }}
 
     - id: publish
-      name: Publish
+      name: Publicar no GitHub
       action: publish:github
       input:
-        allowedHosts:
-          - github.com
-        description: This is ${{ parameters.component_id }}
-        repoUrl: github.com?owner=westibcar&repo=${{parameters.component_id}}
-        protectDefaultBranch: false
-        repoVisibility: public
+        allowedHosts: ['github.com']
+        description: Este é o serviço ${{ parameters.name }}
+        repoUrl: github.com/westibcar/${{ parameters.repoName }}
+        defaultBranch: main
 
     - id: register
-      name: Register
+      name: Registrar no Catálogo
       action: catalog:register
       input:
         repoContentsUrl: ${{ steps['publish'].output.repoContentsUrl }}
-        catalogInfoPath: "/catalog-info.yaml"
+        catalogInfoPath: /catalog-info.yaml
 
+  # LINKS DE SAÍDA apresentados ao final do processo
   output:
     links:
-      - title: Repository
+      - title: Repositório
         url: ${{ steps['publish'].output.remoteUrl }}
+      - title: Abrir no Catálogo
+        icon: catalog
+        entityRef: ${{ steps['register'].output.entityRef }}
