--- a/flask-service/template.yaml
+++ b/flask-service/template.yaml
@@ -1,88 +1,73 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
+# some metadata about the template itself
 metadata:
-  name: flask-service # Nome único do template
-  title: Template Flask Service  # Título exibido na interface do Backstage
-  description: Template para deploy do app Flask service # Descrição breve do que o template faz
+  name: flask-service
+  title: Template Flask Service
+  description: Template para deploy do app Flask service
 spec:
-  owner: devops  # Dono deste template no catálogo
-  type: service  # Tipo do template (pode ser 'website', 'service', etc.)
+  owner: devops
+  type: service
 
-  # FORMULÁRIO apresentado ao usuário na interface do Backstage
+  # these are the steps which are rendered in the frontend with the form input
   parameters:
-    - title: Template Flask Service 
+    - title: Fill in some steps
       required:
         - name
         - environment
       properties:
         name:
-          title: Nome do Serviço
+          title: Name
           type: string
-          description: Template para deploy do app Flask service
+          description: Unique name of the component
           ui:autofocus: true
-        environment:
-          title: Ambiente
-          type: string
-          description: Ambiente onde o serviço será implantado
-          enum:
-            - dev
-            - staging
-            - prod
-          default: dev
-        owner:
-          title: devops
-          type: string
-          description: devops
-          ui:field: OwnerPicker
           ui:options:
-            catalogFilter:
-              kind: Group
-
-    - title: Repositório Template Software
+            rows: 5
+        environment:
+          title: Environment
+          type: string
+          description: Environment of the component
+          enum:
+            - production
+            - staging
+            - development
+          default: development
+    - title: Choose a location
       required:
-        - repoName
+        - repoUrl
       properties:
-        repoName:
-          title: Localização do Repositório
+        repoUrl:
+          title: Repository Location
           type: string
           ui:field: RepoUrlPicker
           ui:options:
             allowedHosts:
               - github.com
 
-  # PASSOS de execução do template (executados em série)
+  # here's the steps that are executed in series in the scaffolder backend
   steps:
     - id: fetch-base
-      name: Buscar Template Base
+      name: Fetch Base
       action: fetch:template
       input:
-        url: ./template                        # Caminho local ou repositório remoto com os arquivos-base
+        url: ./template
         values:
           app_name: ${{ parameters.name }}
           app_env: ${{ parameters.environment }}
-          app_wner: ${{ parameters.owner }}
+          app_owner: ${{ parameters.owner }}
 
     - id: publish
-      name: Publicar no GitHub
+      name: Publish
       action: publish:github
       input:
         allowedHosts: ['github.com']
-        description: Este é o serviço ${{ parameters.name }}
+        description: This is ${{ parameters.name }}
         repoUrl: github.com/westibcar/${{ parameters.repoName }}
-        defaultBranch: main
+        defaultBranch: 'main'
 
     - id: register
-      name: Registrar no Catálogo
+      name: Register
       action: catalog:register
       input:
         repoContentsUrl: ${{ steps['publish'].output.repoContentsUrl }}
-        catalogInfoPath: /catalog-info.yaml
-
-  # LINKS DE SAÍDA apresentados ao final do processo
-  output:
-    links:
-      - title: Repositório
-        url: ${{ steps['publish'].output.remoteUrl }}
-      - title: Abrir no Catálogo
-        icon: catalog
-        entityRef: ${{ steps['register'].output.entityRef }}
+        catalogInfoPath: '/catalog-info.yaml'
