--- a/flask-service/template/catalog.info.yaml
+++ b/flask-service/template/catalog.info.yaml
@@ -8,5 +8,5 @@ metadata:
     backstage.io/techdocs-ref: dir:.
 spec:
   type: service
-  owner: development
+  owner: ${{values.app_owner}}
   lifecycle: experimental
