--- a/flask-service/template.yaml
+++ b/flask-service/template.yaml
@@ -62,7 +62,7 @@ spec:
       input:
         allowedHosts: ['github.com']
         description: This is ${{ parameters.name }}
-        repoUrl: github.com/westibcar/${{ parameters.repoName }}
+        repoUrl: github.com/westibcar/${{ parameters.repoUrl }}
         defaultBranch: 'main'
 
     - id: register
