add template flask fix

--- a/flask-service/template/.github/workflows/cd.yml
+++ b/flask-service/template/.github/workflows/cd.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: westibcar/${{ values.app_name }}
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}  # precisa de permissão para escrever
+          token: ${{ '${{ secrets.PERSONAL_ACCESS_TOKEN }}' }}  # precisa de permissão para escrever
           path: infra
 
       - name: Configurar Git
@@ -27,7 +27,7 @@ jobs:
       - name: Atualizar a tag da imagem no Helm values.yaml
         run: |
           cd infra
-          IMAGE_TAG=${{ github.event.workflow_run.head_sha }}
+          IMAGE_TAG=${{ '${{ github.event.workflow_run.head_sha }}' }}
           sed -i "s/tag: .*/tag: ${IMAGE_TAG::7}/" charts/${{ values.app_name }}/values.yaml
 
       - name: Commit e Push
