--- a/flask-service/template/.github/workflows/ci.yml
+++ b/flask-service/template/.github/workflows/ci.yml
@@ -21,12 +21,12 @@ jobs:
       - name: Login no Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ '${{ secrets.DOCKERHUB_USERNAME }}' }}
+          password: ${{ '${{ secrets.DOCKERHUB_TOKEN }}' }}
 
       - name: Build da imagem apenas com a tag da versão
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ values.app_name }}:${IMAGE_TAG} .
+          docker build -t ${{ '${{ secrets.DOCKERHUB_USERNAME }}' }}/${{ values.app_name }}:${IMAGE_TAG} .
 
       - name: Push da imagem
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ values.app_name }}:${IMAGE_TAG}
+        run: docker push ${{ '${{ secrets.DOCKERHUB_USERNAME }}' }}/${{ values.app_name }}:${IMAGE_TAG}
