add template flask fix

--- a/flask-service/template/catalog-info.yaml
+++ b/flask-service/template/catalog-info.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ${{ values.app_name }}
   description: Python app that displays time - named ${{ values.app_name }}
   annotations:
-    github.com/project-slug: westibcar/${{ values.app_name }}
+    github.com/project-slug: uday-platform-idp-org/${{ values.app_name }}
     backstage.io/techdocs-ref: dir:.
 spec:
   type: service
