--- a/flask-service/template/mkdocs.yaml
+++ b/flask-service/template/mkdocs.yaml
@@ -1,6 +1,6 @@
 site_name: ${{ values.app_name }}
 site_description: 'Documentação de usabilidade do ${{ values.app_name }}'
-repo_url: https://github.com/westibcar/${{ values.app_name }}
+repo_url: https://github.com/uday-platform-idp-org/${{ values.app_name }}
 edit_uri: edit/main/docs
 
 plugins:
