add template flask fix

--- a/flask-service/template.yaml
+++ b/flask-service/template.yaml
@@ -72,7 +72,7 @@ spec:
       input:
         allowedHosts: ['github.com']
         description: This is ${{ parameters.name }}
-        repoUrl: github.com?owner=uday-platform-idp-org&repo=${{ parameters.repoUrl }}
+        repoUrl: github.com/uday-platform-idp-org/${{ parameters.repoUrl }}
         defaultBranch: 'main'
         protectDefaultBranch: false
       
