add template flask fix

--- a/flask-service/template.yaml
+++ b/flask-service/template.yaml
@@ -74,7 +74,8 @@ spec:
         description: This is ${{ parameters.name }}
         repoUrl: github.com/uday-platform-idp-org/${{ parameters.repoUrl }}
         defaultBranch: 'main'
-      
+        protectDefaultBranch: false
+        
     - id: register
       name: Register
       action: catalog:register
