add template flask fix

--- a/flask-service/template.yaml
+++ b/flask-service/template.yaml
@@ -69,7 +69,7 @@ spec:
       input:
         allowedHosts: ['github.com']
         description: This is ${{ parameters.name }}
-        repoUrl: github.com/uday-platform-idp-org/=${{ parameters.repo }}
+        repoUrl: github.com?owner=uday-platform-idp-org&repo=${{ parameters.repo }}
         defaultBranch: 'main'
 
     - id: register
