--- a/flask-service/template/.github/workflows/ci-cd.yaml
+++ b/flask-service/template/.github/workflows/ci-cd.yaml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     outputs:
-      image_tag: ${{ steps.set-tag.outputs.image_tag }}
-      commit_sha: ${{ github.sha }}
+      image_tag: ${{ '${{ steps.set-tag.outputs.image_tag }}' }}
+      commit_sha: ${{ '${{ github.sha }} }}' }}
 
     steps:
       - name: Checkout do código
@@ -28,16 +28,16 @@ jobs:
       - name: Login no Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ '${{ secrets.DOCKERHUB_USERNAME }}' }}
+          password: ${{ '${{ secrets.DOCKERHUB_TOKEN }}' }}
 
       - name: Build da imagem Docker
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ values.app_name }}:${{ steps.set-tag.outputs.image_tag }} .
+          docker build -t ${{ '${{ secrets.DOCKERHUB_USERNAME }}' }}/${{ '${{ values.app_name }}' }}:${{ '${{ steps.set-tag.outputs.image_tag }}' }} .
 
       - name: Push da imagem
         run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ values.app_name }}:${{ steps.set-tag.outputs.image_tag }}
+          docker push ${{ '${{ secrets.DOCKERHUB_USERNAME }}' }}/${{ '${{ values.app_name }}' }}:${{ '${{ steps.set-tag.outputs.image_tag }}' }}
 
   update-image-tag:
     needs: build-and-push-image
@@ -47,8 +47,8 @@ jobs:
       - name: Clonar repositório de deployment
         uses: actions/checkout@v3
         with:
-          repository: uday-platform-idp-org/${{ values.app_name }}
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          repository: uday-platform-idp-org/${{ '${{ values.app_name }}' }}
+          token: ${{ '${{ secrets.PERSONAL_ACCESS_TOKEN }}' }}
           path: infra
 
       - name: Configurar Git
@@ -59,11 +59,11 @@ jobs:
       - name: Atualizar a tag da imagem no Helm values.yaml
         run: |
           cd infra
-          sed -i "s/tag: .*/tag: ${{ needs.build-and-push-image.outputs.image_tag }}/" charts/${{ values.app_name }}/values.yaml
+          sed -i "s/tag: .*/tag: ${{ '${{ needs.build-and-push-image.outputs.image_tag }}' }}/" charts/${{ '${{ values.app_name }}' }}/values.yaml
 
       - name: Commit e Push
         run: |
           cd infra
           git add .
-          git commit -m "Atualiza imagem para ${{ needs.build-and-push-image.outputs.image_tag }}"
+          git commit -m "Atualiza imagem para ${{ '${{ needs.build-and-push-image.outputs.image_tag }}' }}"
           git push
