--- a/flask-service/template/.github/workflows/ci-cd.yaml
+++ b/flask-service/template/.github/workflows/ci-cd.yaml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     outputs:
-      image_tag: ${{ steps.set-tag.outputs.image_tag }}
-      commit_sha: ${{ github.sha }} }}
+      image_tag: ${{ '${{ steps.set-tag.outputs.image_tag }}' }}
+      commit_sha: ${{ '${{ github.sha }}' }}
 
     steps:
       - name: Checkout do código
@@ -33,11 +33,11 @@ jobs:
 
       - name: Build da imagem Docker
         run: |
-          docker build -t ${{ '${{ secrets.DOCKERHUB_USERNAME }}' }}/${{ values.app_name }}:${{ steps.set-tag.outputs.image_tag }} .
+          docker build -t ${{ '${{ secrets.DOCKERHUB_USERNAME }}' }}/${{ values.app_name }}:${{ '${{ steps.set-tag.outputs.image_tag }}' }} .
 
       - name: Push da imagem
         run: |
-          docker push ${{ '${{ secrets.DOCKERHUB_USERNAME }}' }}/${{ values.app_name }}:${{ steps.set-tag.outputs.image_tag }}
+          docker push ${{ '${{ secrets.DOCKERHUB_USERNAME }}' }}/${{ values.app_name }}:${{ '${{ steps.set-tag.outputs.image_tag }}' }} 
 
   update-image-tag:
     needs: build-and-push-image
@@ -59,11 +59,11 @@ jobs:
       - name: Atualizar a tag da imagem no Helm values.yaml
         run: |
           cd infra
-          sed -i "s/tag: .*/tag: '${{ needs.build-and-push-image.outputs.image_tag }}/" charts/${{ values.app_name }}/values.yaml
+          sed -i "s/tag: .*/tag: '${{ '${{ needs.build-and-push-image.outputs.image_tag }}' }}/" charts/${{ values.app_name }}/values.yaml
 
       - name: Commit e Push
         run: |
           cd infra
           git add .
-          git commit -m "Atualiza imagem para ${{ needs.build-and-push-image.outputs.image_tag }}"
+          git commit -m "Atualiza imagem para ${{ '${{ needs.build-and-push-image.outputs.image_tag }}' }}"
           git push
