--- a/flask-service/template.yaml
+++ b/flask-service/template.yaml
@@ -71,7 +71,8 @@ spec:
         description: This is ${{ parameters.name }}
         repoUrl: github.com?owner=uday-platform-idp-org&repo=${{ parameters.repo }}
         defaultBranch: 'main'
-
+        visibility: 'private'
+        
     - id: register
       name: Register
       action: catalog:register
