--- a/flask-service/template/.github/workflows/ci.yaml
+++ b/flask-service/template/.github/workflows/ci.yaml
@@ -3,26 +3,15 @@ name: Build Docker Image
 on:
   push:
     paths:
-      - ${{ values.app_name }}/** 
+      - ${{ values.app_name }}/**  # Gatilho para alterações no diretório uday_app
     branches:
-      - main
+      - main  # Gatilho para branch principal
 
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Forçar GitHub a aplicar secrets da organização
-        env:
-          GH_REPO: ${{ github.repository }}
-          GH_TOKEN: ${{ secrets.GH_ADMIN_TOKEN }}
-        run: |
-          echo "Tornando público temporariamente..."
-          curl -X PATCH -H "Authorization: token $GH_TOKEN" \
-            -H "Accept: application/vnd.github+json" \
-            https://api.github.com/repos/$GH_REPO \
-            -d '{"private": false}'
-
       - name: Checkout do código
         uses: actions/checkout@v3
 
@@ -32,12 +21,12 @@ jobs:
       - name: Login no Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ '${{ secrets.DOCKERHUB_USERNAME }}' }}
+          password: ${{ '${{ secrets.DOCKERHUB_TOKEN }}' }}
 
-      - name: Build da imagem
+      - name: Build da imagem apenas com a tag da versão
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ values.app_name }}:${IMAGE_TAG} .
+          docker build -t ${{ '${{ secrets.DOCKERHUB_USERNAME }}' }}/${{ values.app_name }}:${IMAGE_TAG} .
 
       - name: Push da imagem
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ values.app_name }}:${IMAGE_TAG}
+        run: docker push ${{ '${{ secrets.DOCKERHUB_USERNAME }}' }}/${{ values.app_name }}:${IMAGE_TAG}
