--- a/flask-service/template/.github/workflows/cd-cd.yaml
+++ b/flask-service/template/.github/workflows/cd-cd.yaml
@@ -39,7 +39,6 @@ jobs:
         run: |
           docker push ${{ '${{ secrets.DOCKERHUB_USERNAME }}' }}/${{ values.app_name }}:${IMAGE_TAG}
 
-  
   update-image-tag:
     needs: build-and-push-image
     runs-on: ubuntu-latest
@@ -82,7 +81,7 @@ jobs:
       - name: Criar Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          token: ${{ '${{ secrets.PERSONAL_ACCESS_TOKEN }}' }}
           commit-message: Atualiza imagem para ${IMAGE_TAG}
           title: Atualiza imagem para ${IMAGE_TAG}
           body: PR criado automaticamente pela pipeline para atualizar a tag da imagem no Helm.
