--- a/flask-service/template/.github/workflows/cd-cd.yaml
+++ b/flask-service/template/.github/workflows/cd-cd.yaml
@@ -85,6 +85,6 @@ jobs:
           commit-message: Atualiza imagem para ${IMAGE_TAG}
           title: Atualiza imagem para ${IMAGE_TAG}
           body: PR criado automaticamente pela pipeline para atualizar a tag da imagem no Helm.
-          branch: update-image-tag-${{ github.run_id }}
+          branch: update-image-tag-${{ '${{ github.run_id }}' }}
           base: main
         working-directory: infra
