--- a/flask-service/template/.github/workflows/cd-cd.yaml
+++ b/flask-service/template/.github/workflows/cd-cd.yaml
@@ -57,34 +57,32 @@ jobs:
           git config --global user.email "actions@github.com"
 
       - name: Criar nova branch para alteração
-        run: |
-          cd infra
-          git checkout -b update-image-tag-${{ github.run_id }}
+        run: git checkout -b update-image-tag-${{ '${{ github.run_id }}' }}
+        working-directory: infra
 
       - name: Atualizar a tag da imagem no Helm values.yaml
         run: |
-          cd infra
           IMAGE_TAG=${{ '${{ needs.build-and-push-image.outputs.image_tag }}' }}
           sed -i "s/tag: .*/tag: ${IMAGE_TAG}/" charts/${{ values.app_name }}/values.yaml
+        working-directory: infra
 
       - name: Commit das alterações
         run: |
-          cd infra
           git add .
           git commit -m "Atualiza imagem para ${IMAGE_TAG}"
+        working-directory: infra
 
       - name: Push da nova branch
-        run: |
-          cd infra
-          git push origin update-image-tag-${{ '${{ github.run_id }}' }}
+        run: git push origin update-image-tag-${{ '${{ github.run_id }}' }}
+        working-directory: infra
 
       - name: Criar Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
           path: infra
           token: ${{ '${{ secrets.PERSONAL_ACCESS_TOKEN }}' }}
-          commit-message: Atualiza imagem para ${IMAGE_TAG}
-          title: Atualiza imagem para ${IMAGE_TAG}
+          commit-message: Atualiza imagem para ${{ '${{ needs.build-and-push-image.outputs.image_tag }}' }}
+          title: Atualiza imagem para ${{ '${{ needs.build-and-push-image.outputs.image_tag }}' }}
           body: PR criado automaticamente pela pipeline para atualizar a tag da imagem no Helm.
           branch: update-image-tag-${{ '${{ github.run_id }}' }}
           base: main
