--- a/flask-service/template/.github/workflows/cd-cd.yaml
+++ b/flask-service/template/.github/workflows/cd-cd.yaml
@@ -86,3 +86,4 @@ jobs:
           body: PR criado automaticamente pela pipeline para atualizar a tag da imagem no Helm.
           branch: update-image-tag-${{ '${{ github.run_id }}' }}
           base: main
+          delete-branch: true
