--- a/flask-service/template/.github/workflows/cd-cd.yaml
+++ b/flask-service/template/.github/workflows/cd-cd.yaml
@@ -42,6 +42,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Este passo de checkout é necessário para a action create-pull-request funcionar no mesmo repositório
+      # Se o seu código da app e do helm estiverem em repositórios diferentes, use o checkout original
       - name: Checkout do código do deployment
         uses: actions/checkout@v3
         with:
@@ -49,30 +51,32 @@ jobs:
           repository: uday-platform-idp-org/${{ values.app_name }}
           token: ${{ '${{ secrets.PERSONAL_ACCESS_TOKEN }}' }}
           path: infra # Clona para dentro do diretório 'infra'
-          ref: main # <--- Garante que você esteja na branch 'main'
-
+      
       - name: 🔍 Listar conteúdo do diretório clonado (DEBUG)
         run: ls -R infra
-
-      - name: Configurar Git para o commit
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-        working-directory: infra # Execute a configuração do Git dentro do diretório do repositório
 
       - name: Atualizar a tag da imagem no Helm values.yaml
         env:
           NEW_TAG: ${{ '${{ needs.build-and-push-image.outputs.image_tag }}' }}
-        working-directory: infra
+        working-directory: infra # Certifique-se de que este diretório está correto
         run: |
           echo "Alterando a tag da imagem para: $NEW_TAG"
+          # Substitui a linha que começa com 2 espaços e 'tag:'
           sed -i "s/^  tag: .*/  tag: $NEW_TAG/" charts/${{ values.app_name }}/values.yaml
         
-      - name: Commit e Push da alteração para main
-        working-directory: infra
-        run: |
-          git add charts/${{ values.app_name }}/values.yaml
-          git commit -m "chore: Atualiza imagem de ${{ values.app_name }} para ${{ '${{ needs.build-and-push-image.outputs.image_tag }}' }}"
-          git push origin main
-          # Certifique-se de que o token usado (secrets.PERSONAL_ACCESS_TOKEN)
-          # tenha permissões de escrita (write) no repositório de deployment.
+
+      - name: Criar Pull Request com a atualização
+        uses: peter-evans/create-pull-request@v6
+        with:
+          # Aponta para o diretório que contém o repositório clonado
+          path: infra
+          token: ${{ '${{ secrets.PERSONAL_ACCESS_TOKEN }}' }}
+          # A action criará o commit, a branch e o PR automaticamente
+          commit-message: "chore: Atualiza imagem de ${{ values.app_name }} para ${{ '${{ needs.build-and-push-image.outputs.image_tag }}' }}"
+          title: "CI: Atualiza imagem para ${{ '${{ needs.build-and-push-image.outputs.image_tag }}' }}"
+          body: "PR criado automaticamente pela pipeline para atualizar a tag da imagem no Helm para a versão **${{ '${{ needs.build-and-push-image.outputs.image_tag }}' }}**."
+          # Cria uma branch mais descritiva
+          branch: "ci/update-image-${{ '${{ needs.build-and-push-image.outputs.image_tag }}' }}"
+          base: main
+          # Deleta a branch após o merge do PR
+          delete-branch: true
